# soroeditor-qt

./: .gitignore  LICENSE  README-en.md  README.en.md  README.md  ThirdPartyNotices.txt  pyproject.toml
soroeditor/: AboutWindow.py  DataGet.py  DataGetClass.py  DataOperation.py  DataSave.py  DataSaveClass.py  FileOperation.py  Icon.py  MainWindow.py  NewSettingWindow.py  ProjectSettingWindow.py  SettingOperation.py  SettingWindow.py  SoroEditor.py  ThirdPartyNoticesWindow.py  __global__.py  __main__.py  logSetting.py  main.py
soroeditor_qt/: AboutWindow.py  DataOperation.py  FileOperation.py  Icon.py  MainWindow.py  SearchOperation.py  SearchWindow.py  SettingOperation.py  SettingWindow.py  TextEditor.py  ThirdPartyNoticesWindow.py  __global__.py  __main__.py  logSetting.py  main.py
