[tool.poetry]
name = "soroeditor-qt"
version = "0.1.0"
description = "SoroEditor - Parallel Text Editor"
authors = ["joppincal <106348367+joppincal@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
pyyaml = "^6.0.1"
pyside6 = "^6.6.1"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
